# EchoScriber

./: CLAUDE.md  PRD.md  README.md  pyproject.toml
docs/adrs/: 001-agent-plugin-boundary.md
spikes/: 01_device_enumeration.py  02_mic_capture.py  03_loopback_capture.py  04_whisper_load.py  05_realtime_stt.py
src/echoscriber/: __init__.py  agent_api.py  agent_pane.py  app.py  config.py  gui.py  models.py  services.py  session.py  transcript_store.py
src/echoscriber/agents/echo_agent/: __init__.py  context.py  plugin.py  prompts.py
src/echoscriber/agents/echo_agent/llm/: __init__.py  anthropic.py  ollama.py  openai_backend.py
src/echoscriber/audio/: aec.py  capture.py  devices.py
src/echoscriber/stt/: hf_adapter.py  whisper_adapter.py
