[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echoscriber"
version = "0.1.0"
description = "Linux realtime speech-to-text desktop prototype"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.7",
  "pulsectl>=23.0",
]

[project.optional-dependencies]
faster-whisper = ["faster-whisper>=1.0", "numpy>=1.24"]
huggingface = ["transformers>=4.35", "torch>=2.0", "numpy>=1.24"]
agent = ["anthropic>=0.40", "openai>=1.50", "httpx>=0.27"]

[project.scripts]
echoscriber = "echoscriber.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
